# vrm_chat_llm

./: .gitignore  README.md  VRMキャラクターチャットシステム 設計書.md  directorystructure.md  technologystack.md  アプリ設計方針.md
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/core/: config.py
backend/app/schemas/: websocket.py
backend/app/services/: llm_service.py
backend/config/: default.yaml
backend/services/: tts_service.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx
frontend/src/components/: ChatContainer.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  LipSyncManager.tsx  MessageList.tsx  VRMAnimationController.tsx  VRMAvatar.tsx  VRMContainer.tsx  VRMViewer.tsx  VoiceInputAnimation.tsx
frontend/src/hooks/: useAudioLevel.ts  useAudioPlayback.ts  useLipSync.ts  useSpeechRecognition.ts  useWebSocket.ts
frontend/src/types/: chat.ts  speech.ts  styled-jsx.d.ts  vrm.ts  websocket.ts
