[tool.poetry]
name = "vrm-chat-backend"
version = "0.1.0"
description = "VRMキャラクターチャットシステムのバックエンド"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^0.2.1"
pydantic = "^2.4.2"
websockets = "^12.0"
langchain = "^0.0.335"
openai = "^1.3.0"
python-multipart = "^0.0.6"
[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 